<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pharmacy</string>

    <string name="action_settings">Settings</string>
    <string name="done">Done</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="add_new">Add new product</string>
    <string name="simple_text_example">This is simple text. This is simple text. This is simple text. This is simple text.</string>

    <string name="title_activity_product"></string>
    <string name="item_list_button1">button1</string>
    <string name="item_list_button2">button2</string>
    <string name="button_text_details">Details</string>
    <string name="title_activity_add_new_item">Add a new product</string>
    <string name="enter_name_of_medicine_edit_text">Name of product</string>
    <string name="choose_category_text_view">Choose a category:</string>
    <string name="write_description_edit_text">Description of product</string>
    <string name="save_text_button">Save</string>
    <string name="cancel_text_button">Cancel</string>

    <string name="text_Logo1">Pharmacy</string>
    <string name="text_Logo2">onLine</string>
    <string name="text_arom">Ароматерапия</string>
    <string name="text_gome">Гомеопатия</string>
    <string name="text_med">Изделия медицинского назначения</string>
    <string name="text_cosm">Косметика</string>
    <string name="text_mom">Товары для детей и мам</string>
    <string name="text_prep">Лекарственные препараты</string>
    <string name="text_image_content_description">Image</string>
    <string name="text_add_new">Add new&#8230;</string>
    <string name="title_categories">Categories</string>
    <string name="text_zero">0</string>
    <string name="button_text_add_to_cart">Add to cart</string>
    <string name="product_list_message_add_product_to_shopping_cart">" has been added to shopping cart!"</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="text_shopping_cart_title">Shopping cart</string>

</resources>
