<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="android.oa.com.ua.pharmacy.activity.ProductListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_product_list"
        style="@style/MyToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/image_view_cart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/text_image_content_description"
                android:src="@drawable/cart_icon" />

            <TextView
                android:id="@+id/text_cart_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text="@string/text_zero"
                android:textColor="#ffff0000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>

    </android.support.v7.widget.Toolbar>

    <ListView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp" />

    <Button
        android:id="@+id/add_new_item_button"
        style="@style/ThreeButtonsOnProductList"
        android:layout_margin="0dp"
        android:layout_weight="0"
        android:text="@string/text_add_new" />
</LinearLayout>
